<resources>
    <string name="app_name">Quest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">John Smith</string>
    <string name="nav_header_subtitle">john.smith@example.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_log">Log</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_request">ReQuest</string>
    <string name="title_activity_friends_list">FriendsList</string>
    <string name="title_activity_friend">Friend</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_friend_adapter">FriendAdapter</string>

    <string-array name="Colors">
        <item>Default</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Orange</item>
        <item>Purple</item>
    </string-array>
</resources>
