<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_log"
            android:icon="@drawable/ic_menu_log"
            android:title="@string/menu_log" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_menu_group"
            android:title="@string/menu_groups" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_menu_friend"
            android:title="@string/menu_friends" />
        <item
            android:id="@+id/nav_request"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_request" />
    </group>
</menu>
